--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -770,8 +770,8 @@
     <!-- Main Settings screen setting title for the item that takes you to the safety center [CHAR LIMIT=60] -->
     <string name="safety_center_title">Security &amp; privacy</string>
     <!-- TODO(b/208624929): Update to an UX approved summary and char limit. -->
-    <!-- Main Settings screen setting summary for the item that takes you to the safety center [CHAR LIMIT=60] -->
-    <string name="safety_center_summary">Permissions, screen lock, app security</string>
+    <!-- Main Settings screen setting summary for the item that takes you to the privacy and security settings. [CHAR LIMIT=60] -->
+    <string name="safety_center_summary">App security, device lock, permissions</string>
 
     <!-- Face enrollment and settings --><skip />
     <!-- Note: Update FaceEnrollParentalConsent.CONSENT_STRING_RESOURCES when any _consent_ strings are added or removed. -->
@@ -1269,14 +1269,14 @@
     <string name="security_settings_fingerprint_enroll_lift_touch_again">Lift finger, then touch sensor again</string>
     <!-- Text shown during fingerprint enrollment to indicate bad sensor calibration. [CHAR LIMIT=100] -->
     <string name="security_settings_fingerprint_bad_calibration">Can\u2019t use fingerprint sensor. Visit a repair provider</string>
-    <!-- Title for Advanced Security Settings [CHAR LIMIT=60] -->
-    <string name="security_advanced_settings">Advanced settings</string>
-    <!-- String for summary to be shown in Advanced settings tile in Security page, when there is a work profile set up on the device. Smart Lock is a brand name. [CHAR_LIMIT=NONE] -->
-    <string name="security_advanced_settings_work_profile_settings_summary">Work profile lock, Smart Lock</string>
-    <!-- String for summary to be shown in Advanced settings tile in Security page, when there is no work profile set up on the device. Smart Lock is a brand name. [CHAR_LIMIT=NONE] -->
-    <string name="security_advanced_settings_no_work_profile_settings_summary">Smart Lock and more</string>
-    <!-- Search keywords for Advanced settings in Security page. [CHAR_LIMIT=NONE] -->
-    <string name="security_advanced_settings_keywords">Advanced settings</string>
+    <!-- Title for the section that has additional security settings. [CHAR LIMIT=60] -->
+    <string name="security_advanced_settings">More security settings</string>
+    <!-- String for the "More security settings" summary when a work profile is on the device. [CHAR_LIMIT=NONE] -->
+    <string name="security_advanced_settings_work_profile_settings_summary">Work profile lock, encryption, and more</string>
+    <!-- Summary string for the "More security settings" section. [CHAR_LIMIT=NONE] -->
+    <string name="security_advanced_settings_no_work_profile_settings_summary">Encryption, credentials, and more</string>
+    <!-- Search keywords for the "More security settings" section in security settings. [CHAR_LIMIT=NONE] -->
+    <string name="security_advanced_settings_keywords">security, more security settings, more settings, advanced security settings</string>
 
 
     <!-- Text shown when "Add fingerprint" button is disabled -->
