--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -519,7 +519,7 @@
     <string name="preference_of_system_locale_title">System language</string>
 
     <!-- Summary for preference of the system default locale. [CHAR LIMIT=50]-->
-    <string name="preference_of_system_locale_summary">System default - <xliff:g id="default_language" example="English (United States)">%1$s</xliff:g></string>
+    <string name="preference_of_system_locale_summary">System default</string>
 
     <!-- Description for the app without any supported languages. [CHAR LIMIT=NONE]-->
     <string name="desc_no_available_supported_locale">Language selection for this app isn\u2019t available from Settings.</string>
