--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -556,28 +556,18 @@
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"ແຕະເພື່ອຕັ້ງຄ່າ"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"ການປົດລັອກດ້ວຍລາຍນິ້ວມືສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"ການປົດລັອກດ້ວຍໜ້າສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
-    <!-- no translation found for private_space_biometric_unlock_title (1978145237698659673) -->
-    <skip />
-    <!-- no translation found for private_space_fingerprint_enroll_introduction_title (5187730641333680942) -->
-    <skip />
-    <!-- no translation found for private_space_fingerprint_enroll_introduction_message (9092068873421435300) -->
-    <skip />
-    <!-- no translation found for private_space_fingerprint_enroll_introduction_footer_message (7125255484447984854) -->
-    <skip />
-    <!-- no translation found for private_space_fingerprint_enroll_finish_message (4754797926493316965) -->
-    <skip />
-    <!-- no translation found for private_space_face_enroll_introduction_title (3717541082520006032) -->
-    <skip />
-    <!-- no translation found for private_space_face_enroll_introduction_message (250239418499081821) -->
-    <skip />
-    <!-- no translation found for private_space_face_enroll_introduction_info_looking (5694757845303924042) -->
-    <skip />
-    <!-- no translation found for private_space_face_enroll_introduction_info_less_secure (8460719783943533172) -->
-    <skip />
-    <!-- no translation found for private_space_face_settings_require_attention_details (2799569069549999689) -->
-    <skip />
-    <!-- no translation found for private_space_face_settings_footer (7722256209563543711) -->
-    <skip />
+    <string name="private_space_biometric_unlock_title" msgid="1978145237698659673">"ການປົດລັອກດ້ວຍໃບໜ້າ ແລະ ລາຍນິ້ວມືສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
+    <string name="private_space_fingerprint_enroll_introduction_title" msgid="5187730641333680942">"ຕັ້ງຄ່າການປົດລັອກດ້ວຍລາຍນິ້ວມືສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
+    <string name="private_space_fingerprint_enroll_introduction_message" msgid="9092068873421435300">"ໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານແທ້ ເຊັ່ນ: ໃນເວລາທີ່ທ່ານເຂົ້າສູ່ລະບົບແອັບ ຫຼື ອະນຸມັດການຊື້"</string>
+    <string name="private_space_fingerprint_enroll_introduction_footer_message" msgid="7125255484447984854">"ພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານສາມາດຖືກປົດລັອກໄດ້ເມື່ອທ່ານບໍ່ໄດ້ຕັ້ງໃຈ ເຊັ່ນ: ຫາກມີຄົນຍົກໂທລະສັບຂອງທ່ານໄປແຕະກັບນິ້ວມືຂອງທ່ານ."</string>
+    <string name="private_space_fingerprint_enroll_finish_message" msgid="4754797926493316965">"ໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ ຫຼື ອະນຸມັດການຊື້"</string>
+    <string name="private_space_face_enroll_introduction_title" msgid="3717541082520006032">"ຕັ້ງຄ່າການປົດລັອກດ້ວຍໜ້າສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
+    <string name="private_space_face_enroll_introduction_message" msgid="250239418499081821">"ໃຊ້ໃບໜ້າຂອງທ່ານເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານແທ້ ເຊັ່ນ: ໃນເວລາທີ່ທ່ານເຂົ້າສູ່ລະບົບແອັບ ຫຼື ອະນຸມັດການຊື້"</string>
+    <string name="private_space_face_enroll_introduction_info_looking" msgid="5694757845303924042">"ການເບິ່ງໂທລະສັບຈະສາມາດປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນໄດ້ເຖິງແມ່ນວ່າທ່ານຈະບໍ່ໄດ້ຕັ້ງໃຈກໍຕາມ. ຫາກມີຄົນທີ່ໜ້າຄ້າຍທ່ານຫຼາຍ ເຊັ່ນ: ພີ່ນ້ອງທີ່ໜ້າຕາຄືກັນ ຫຼື ຫາກມີຜູ້ຖືອຸປະກອນຍື່ນໃສ່ໜ້າຂອງທ່ານ, ກໍອາດປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານໄດ້ເຊັ່ນກັນ."</string>
+    <string name="private_space_face_enroll_introduction_info_less_secure" msgid="8460719783943533172">"ການໃຊ້ໃບໜ້າຂອງທ່ານເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານອາດບໍ່ປອດໄພເທົ່າການໃຊ້ຮູບແບບ, PIN ຫຼື ລະຫັດຜ່ານ"</string>
+    <string name="private_space_face_settings_require_attention_details" msgid="2799569069549999689">"ເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນ, ທ່ານຕ້ອງມືນຕາ. ຖອດແວ່ນກັນແດດອອກເພື່ອຜົນໄດ້ຮັບທີ່ດີທີ່ສຸດ."</string>
+    <string name="private_space_face_settings_footer" msgid="7722256209563543711">"ໃຊ້ໃບໜ້າຂອງທ່ານເພື່ອປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ.\n\nກະລຸນາຮັບຊາບວ່າ:\nທ່ານສາມາດຕັ້ງຄ່າໜ້າໄດ້ເທື່ອລະໃບໜ້າເທົ່ານັ້ນ. ເພື່ອເພີ່ມໃບໜ້າອື່ນ, ໃຫ້ລຶບໃບໜ້າປັດຈຸບັນອອກກ່ອນ.\n\nການເບິ່ງໂທລະສັບສາມາດປົດລັອກເຄື່ອງໄດ້ໂດຍທີ່ທ່ານບໍ່ໄດ້ຕັ້ງໃຈ.\n\nຄົນອື່ນອາດປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານໄດ້ຫາກເຂົາເຈົ້າຍື່ນອຸປະກອນໃສ່ໜ້າຂອງທ່ານ.\n\nຄົນທີ່ໜ້າຄ້າຍທ່ານຫຼາຍ ເຊັ່ນ: ພີ່ນ້ອງທີ່ໜ້າຕາຄືກັນອາດປົດລັອກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານໄດ້."</string>
+    <string name="private_space_face_settings_require_confirmation_details" msgid="5406498664903812249">"ເມື່ອໃຊ້ປົດລັອກດ້ວຍໜ້າ, ຈະຕ້ອງມີຂັ້ນຕອນການຢືນຢັນສະເໝີ"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"ວິທີປົດລັອກ"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"ຄືກັນກັບການລັອກໜ້າຈໍອຸປະກອນ"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"ເລືອກການລັອກໃໝ່ສຳລັບພື້ນທີ່ສ່ວນບຸກຄົນບໍ?"</string>
@@ -587,6 +577,8 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"ທຸກເທື່ອທີ່ອຸປະກອນລັອກ"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 ນາທີຫຼັງຈາກໄລຍະໝົດເວລາໜ້າຈໍ"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"ຫຼັງຈາກຣີສະຕາດອຸປະກອນເທົ່ານັ້ນ"</string>
+    <!-- no translation found for private_space_auto_lock_footer_message (2752467351969856487) -->
+    <skip />
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"ເຊື່ອງພື້ນທີ່ສ່ວນບຸກຄົນໄວ້"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"ເຊື່ອງພື້ນທີ່ສ່ວນບຸກຄົນເມື່ອມັນຖືກລັອກໄວ້"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ເພື່ອບໍ່ໃຫ້ຄົນອື່ນຮູ້ວ່າທ່ານມີພື້ນທີ່ສ່ວນບຸກຄົນຢູ່ອຸປະກອນຂອງທ່ານ, ທ່ານສາມາດເຊື່ອງມັນຈາກລາຍຊື່ແອັບຂອງທ່ານໄດ້"</string>
@@ -602,7 +594,7 @@
     <string name="private_space_category_system" msgid="1286843321867285700">"ລະບົບ"</string>
     <string name="private_space_delete_title" msgid="636873505724100006">"ລຶບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_delete_header" msgid="4594429153176776184">"ລຶບພື້ນທີ່ສ່ວນບຸກຄົນບໍ?"</string>
-    <string name="private_space_delete_summary" msgid="3344372988408565545">"ພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານຈະຖືກລຶບອອກຈາກອຸປະກອນຂອງທ່ານ. ແອັບ ແລະ ຂໍ້ມູນສ່ວນຕົວທັງໝົດຈະຖືກລຶບ. ໂດຍທ່ານຈະບໍ່ສາມາດຍົກເລີກຄຳສັ່ງນີ້ໄດ້."</string>
+    <string name="private_space_delete_summary" msgid="7507302208399543921">"ລະບົບຈະລຶບພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານອອກຈາກອຸປະກອນຂອງທ່ານຢ່າງຖາວອນ. \n\nພ້ອມທັງລຶບແອັບ ແລະ ຂໍ້ມູນຂອງແອັບທັງໝົດໃນພື້ນທີ່ຂອງທ່ານອອກຈາກ "<b>"ພື້ນທີ່ຈັດເກັບພາຍໃນ"</b>" ຂອງໂທລະສັບຂອງທ່ານຢ່າງຖາວອນນຳ."</string>
     <string name="private_space_accounts" msgid="1078277762792056395">"ບັນຊີຕໍ່ໄປນີ້ຈະຖືກລຶບອອກຈາກພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານ:"</string>
     <string name="private_space_delete_button_label" msgid="1256981385318225002">"ລຶບ"</string>
     <string name="private_space_confirm_deletion_header" msgid="3468651585498942977">"ກຳລັງລຶບພື້ນທີ່ສ່ວນບຸກຄົນ…"</string>
@@ -621,7 +613,7 @@
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ເລືອກບັນຊີ Google ສຳລັບພື້ນທີ່ຂອງທ່ານ"</b>\n"ການໃຊ້ບັນຊີສະເພາະຊ່ວຍຢຸດການຊິງຄ໌ໄຟລ໌, ຮູບພາບ ແລະ ອີເມວທີ່ປາກົດຢູ່ນອກພື້ນທີ່ຂອງທ່ານ"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ຕັ້ງລັອກ"</b>\n"ລັອກພື້ນທີ່ຂອງທ່ານ ເພື່ອບໍ່ໃຫ້ຄົນອື່ນເປີດມັນ"</string>
     <string name="private_space_install_apps_text" msgid="5693139160766464498"><b>"ຕິດຕັ້ງແອັບ"</b>\n"ພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານມີ Play Store ຂອງມັນເອງ ເພື່ອໃຫ້ທ່ານສາມາດຕິດຕັ້ງແອັບຕ່າງໆໄດ້ຢ່າງງ່າຍດາຍ."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"ແອັບໃນພື້ນທີ່ສ່ວນຕົວຂອງທ່ານຈະບໍ່ປາກົດໃນຕົວຈັດການສິດອະນຸຍາດ, ແຜງໜ້າປັດຄວາມເປັນສ່ວນຕົວ ແລະ ການຕັ້ງຄ່າອື່ນໆເມື່ອລັອກພື້ນທີ່ສ່ວນຕົວຂອງທ່ານ.\n\nລະບົບບໍ່ສາມາດຍ້າຍພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄປຫາອຸປະກອນໃໝ່ໄດ້. ທ່ານຈະຕ້ອງຕັ້ງຄ່າພື້ນທີ່ສ່ວນຕົວໃໝ່ຫາກທ່ານຕ້ອງການໃຊ້ຢູ່ອຸປະກອນອື່ນ.\n\nໃຜກໍຕາມທີ່ເຊື່ອມຕໍ່ອຸປະກອນຂອງທ່ານກັບຄອມພິວເຕີ ຫຼື ຕິດຕັ້ງແອັບທີ່ເປັນອັນຕະລາຍໃນອຸປະກອນຂອງທ່ານອາດສາມາດເຂົ້າເຖິງພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄດ້."</string>
+    <string name="private_space_apps_permission_text" msgid="7476093383297232044">"ແອັບໃນພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານຈະບໍ່ປາກົດໃນຕົວຈັດການສິດອະນຸຍາດ, ແຜງໜ້າປັດຄວາມເປັນສ່ວນຕົວ ແລະ ການຕັ້ງຄ່າອື່ນໆເມື່ອລັອກພື້ນທີ່ສ່ວນຕົວຂອງທ່ານ.\n\nລະບົບບໍ່ສາມາດກູ້ຄືນພື້ນທີ່ສ່ວນບຸກຄົນຂອງທ່ານໄປຫາອຸປະກອນໃໝ່ໄດ້. ທ່ານຈະຕ້ອງຕັ້ງຄ່າພື້ນທີ່ສ່ວນບຸກຄົນໃໝ່ຫາກທ່ານຕ້ອງການໃຊ້ຢູ່ອຸປະກອນອື່ນ.\n\nໃຜກໍຕາມທີ່ເຊື່ອມຕໍ່ອຸປະກອນຂອງທ່ານກັບຄອມພິວເຕີ ຫຼື ຕິດຕັ້ງແອັບທີ່ເປັນອັນຕະລາຍໃນອຸປະກອນຂອງທ່ານອາດສາມາດເຂົ້າເຖິງພື້ນທີ່ສ່ວນຕົວຂອງທ່ານໄດ້."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ສຶກສາເພີ່ມເຕີມກ່ຽວກັບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ຂັ້ນຕອນນີ້ຈະໃຊ້ເວລາໄລຍະໜຶ່ງ"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"ກຳລັງຕັ້ງຄ່າພື້ນທີ່ສ່ວນຕົວ…"</string>
@@ -1492,8 +1484,7 @@
     <string name="error_duplicate_apn_entry" msgid="7792928408935276618">"ລາຍການ APN ຊ້ຳກັນ."</string>
     <string name="error_name_empty" msgid="1258275899283079142">"ແຖບຂໍ້ມູນຊື່ບໍ່ສາມາດປ່ອຍຫວ່າງໄດ້."</string>
     <string name="error_apn_empty" msgid="7657491065443746915">"APN ບໍ່ສາມາດປ່ອຍໃຫ້ຫວ່າງໄດ້."</string>
-    <!-- no translation found for error_apn_type_empty (8697781608034468813) -->
-    <skip />
+    <string name="error_apn_type_empty" msgid="8697781608034468813">"ຕ້ອງລະບຸປະເພດ APN."</string>
     <string name="error_mcc_not3" msgid="883659545640179094">"ຊ່ອງຂໍ້ມູນ MMC ຕ້ອງມີ 3 ໂຕເລກ."</string>
     <string name="error_mnc_not23" msgid="7642478711158474918">"ແຖບຂໍ້ມູນ MNC ຕ້ອງມີໂຕເລກຢ່າງໜ້ອຍ 2 ຫຼື 3 ໂຕ."</string>
     <string name="error_adding_apn_type" msgid="1324263534991467943">"ຜູ້ໃຫ້ບໍລິການບໍ່ອະນຸຍາດໃຫ້ເພີ່ມ APN ປະເພດ %s."</string>
@@ -1521,7 +1512,7 @@
     <string name="reset_esim_error_title" msgid="6516110227665862295">"ບໍ່ສາມາດລຶບ eSIM ໄດ້"</string>
     <string name="reset_esim_error_msg" msgid="8459527827897797168">"ມີບາງຢ່າງຜິດພາດເກີດຂຶ້ນ ແລະ ບໍ່ສາມາດລຶບ eSIM ຂອງທ່ານໄດ້.\n\nກະລຸນາຣີສະຕາດອຸປະກອນຂອງທ່ານ ແລ້ວລອງໃໝ່."</string>
     <string name="reset_private_space_delete_title" msgid="2555885198282572990">"ລຶບພື້ນທີ່ສ່ວນບຸກຄົນ"</string>
-    <string name="reset_private_space_delete_dialog" msgid="7506471054091800883">"ຫາກທ່ານມີພື້ນທີ່ສ່ວນບຸກຄົນໃນອຸປະກອນຂອງທ່ານ, ລະບົບຈະລຶບອອກຢ່າງຖາວອນ ແລະ ຈະລຶບບັນຊີ Google ທີ່ເພີ່ມໃສ່ພື້ນທີ່ຂອງທ່ານອອກ.\n\nນອກຈາກນີ້, ລະບົບຈະລຶບແອັບທັງໝົດໃນພື້ນທີ່ຂອງທ່ານ ແລະ ຂໍ້ມູນຂອງແອັບອອກຢ່າງຖາວອນ."</string>
+    <string name="reset_private_space_delete_dialog" msgid="2325106559507364385">"ຫາກທ່ານມີພື້ນທີ່ສ່ວນບຸກຄົນໃນອຸປະກອນຂອງທ່ານ, ລະບົບຈະລຶບອອກຢ່າງຖາວອນ ແລະ ຈະລຶບບັນຊີ Google ທີ່ເພີ່ມໃສ່ພື້ນທີ່ຂອງທ່ານອອກ. \n\nພ້ອມທັງລຶບແອັບ ແລະ ຂໍ້ມູນຂອງແອັບທັງໝົດໃນພື້ນທີ່ຂອງທ່ານອອກຈາກ "<b>"ພື້ນທີ່ຈັດເກັບພາຍໃນ"</b>" ຂອງໂທລະສັບຂອງທ່ານຢ່າງຖາວອນນຳ."</string>
     <string name="main_clear_title" msgid="277664302144837723">"ລຶບຂໍ້ມູນທັງໝົດ (ຣີເຊັດເປັນຄ່າຈາກໂຮງງານ)"</string>
     <string name="main_clear_short_title" msgid="4752094765533020696">"ລຶບຂໍ້ມູນທັງໝົດ (ຣີເຊັດເປັນຄ່າຈາກໂຮງງານ)"</string>
     <string name="main_clear_desc_also_erases_external" msgid="3687911419628956693"><li>"ເພງ"</li>\n<li>"ຮູບພາບ"</li>\n<li>"ຂໍ້ມູນຜູ້ໃຊ້ອື່ນໆ"</li></string>
@@ -3262,7 +3253,7 @@
     <string name="keywords_storage_settings" msgid="6018856193950281898">"ໜ່ວຍຄວາມຈຳ, ແຄສ, ຂໍ້ມູນ, ລຶບ, ລຶບລ້າງ, ຫວ່າງ, ພື້ນທີ່"</string>
     <string name="keywords_bluetooth_settings" msgid="2588159530959868188">"ເຊື່ອມຕໍ່ແລ້ວ, ອຸປະກອນ, ຫູຟັງ, ລຳໂພງ, ໄຮ້ສາຍ, ຈັບຄູ່, ເພງ, ມີເດຍ"</string>
     <string name="keywords_wallpaper" msgid="7332890404629446192">"ພື້ນຫຼັງ, ຮູບແບບສີສັນ, ຕາຕະລາງ, ປັບແຕ່ງ, ປັບແຕ່ງສ່ວນຕົວ"</string>
-    <string name="keywords_styles" msgid="3367789885254807447">"ໄອຄອນ, ການເນັ້ນ, ສີ, ໂຮມສະກຣີນ, ລັອກໜ້າຈໍ, ທາງລັດ, ຂະໜາດຂອງໂມງ"</string>
+    <string name="keywords_styles" msgid="1137053187860081131">"ໄອຄອນ, ການເນັ້ນ, ສີ, ໂຮມສະກຣີນ, ລັອກໜ້າຈໍ, ທາງລັດ, ຂະໜາດຂອງໂມງ"</string>
     <string name="keywords_assist_input" msgid="3086289530227075593">"ຄ່າເລີ່ມຕົ້ນ, ຜູ້ຊ່ວຍ"</string>
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"ການຈ່າຍເງິນ, ຄ່າເລີ່ມຕົ້ນ"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"ການແຈ້ງເຕືອນເຂົ້າ"</string>
@@ -3339,6 +3330,14 @@
     <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"ແກ້ໄຂ"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"ການກຳນົດເວລາ"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"ກຳນົດເວລາ"</string>
+    <!-- no translation found for zen_mode_automatic_trigger_title (9193777783079000267) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_calendar_title (7216665046452644450) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_calendar_link (5694504696975898068) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_calendar_category_title (4860286061420133360) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"ກຳນົດເວລາ"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"ປິດສຽງໂທລະສັບໃນບາງເວລາ"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"ຕັ້ງກົດຂອງການຫ້າມລົບກວນ"</string>
@@ -3609,17 +3608,11 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ແອັບນີ້ບໍ່ຮອງຮັບການຕັ້ງຄ່າທີ່ປັບປຸງໃຫ້ດີຂຶ້ນ"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"ການຕັ້ງຄ່າເພີ່ມເຕີມແມ່ນມີໃຫ້ຢູ່ພາຍໃນແອັບ"</string>
-    <string name="notification_polite_title" msgid="6121016426991791557">"ຄູດາວການແຈ້ງເຕືອນ"</string>
-    <string name="notification_polite_all_apps" msgid="1118651561594250059">"ນຳໃຊ້ຄູດາວໃສ່ການແຈ້ງເຕືອນທັງໝົດ"</string>
-    <string name="notification_polite_all_apps_summary" msgid="540268373207498126">"ຄ່ອຍໆຫຼຸດລະດັບສຽງການແຈ້ງເຕືອນລົງເມື່ອທ່ານໄດ້ຮັບການແຈ້ງເຕືອນຢ່າງຕໍ່ເນື່ອງຈາກແອັບດຽວກັນ"</string>
-    <string name="notification_polite_conversations" msgid="8197695136727245741">"ນຳໃຊ້ຄູດາວໃສ່ການສົນທະນາ"</string>
-    <string name="notification_polite_conversations_summary" msgid="2677141765664359994">"ຄ່ອຍໆຫຼຸດລະດັບສຽງການແຈ້ງເຕືອນລົງເມື່ອທ່ານໄດ້ຮັບຂໍ້ຄວາມຫຼາຍຂໍ້ຄວາມຈາກການສົນທະນາດຽວກັນພາຍໃນໄລຍະເວລາສັ້ນໆ"</string>
-    <string name="notification_polite_disabled" msgid="1378078021594282842">"ຢ່າໃຊ້ຄູດາວການແຈ້ງເຕືອນ"</string>
-    <string name="notification_polite_disabled_summary" msgid="1145341260283746936">"ຢ່າຫຼຸດປະລິມານການແຈ້ງເຕືອນລົງ, ໂດຍບໍ່ຄໍານຶງເຖິງຈໍານວນການແຈ້ງເຕືອນຢ່າງຕໍ່ເນື່ອງຈາກແອັບດຽວກັນ"</string>
-    <string name="notification_polite_vibrate_unlocked" msgid="6142573851761357903">"ສັ່ນເຕືອນເມື່ອປົດລັອກ"</string>
-    <string name="notification_polite_vibrate_unlocked_summary" msgid="1678472892282874459">"ສັ່ນເຕືອນເມື່ອປົດລັອກໜ້າຈໍຢູ່ເທົ່ານັ້ນ"</string>
+    <string name="notification_polite_title" msgid="3801775758735739286">"ຄູດາວ"</string>
+    <string name="notification_polite_main_control_title" msgid="855117131309844580">"ໃຊ້ຄູດາວ"</string>
+    <string name="notification_polite_description" msgid="6414215800132666462">"ເມື່ອທ່ານໄດ້ຮັບການແຈ້ງເຕືອນຈຳນວນຫຼາຍພາຍໃນໄລຍະເວລາສັ້ນໆ, ອຸປະກອນຂອງທ່ານຈະຫຼຸດສຽງລົບກວນ ແລະ ຫຼຸດຈຳນວນປັອບອັບຢູ່ໜ້າຈໍລົງ. ໂດຍການໂທ, ການປຸກ ແລະ ການສົນທະນາສຳຄັນຈະຍັງຄົງແຈ້ງເຕືອນຕາມປົກກະຕິ ແລະ ຍັງສາມາດຊອກຫາການແຈ້ງເຕືອນທີ່ສົ່ງມາທັງໝົດໄດ້ຢ່າງງ່າຍດາຍຕາມເສດສີ."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"ນຳໃຊ້ກັບໂປຣໄຟລ໌ບ່ອນເຮັດວຽກ"</string>
-    <string name="notification_polite_work_summary" msgid="8260947839104352075">"ນຳໃຊ້ການຕັ້ງຄ່າຄູດາວການແຈ້ງເຕືອນຈາກໂປຣໄຟລ໌ສ່ວນຕົວຂອງທ່ານໃສ່ໂປຣໄຟລ໌ບ່ອນເຮັດວຽກຂອງທ່ານ"</string>
+    <string name="notification_polite_work_summary" msgid="5014189280132951378">"ໃຊ້ກັບແອັບໃນໂປຣໄຟລ໌ບ່ອນເຮັດວຽກ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"ບໍລິການຕົວຊ່ວຍ VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ບໍ່ມີແອັບທີ່ຕິດຕັ້ງແລ້ວທີ່ຮ້ອງຂໍໃຫ້ໃຊ້ເປັນບໍລິການຕົວຊ່ວຍ VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"ອະນຸຍາດໃຫ້ເຂົ້າເຖິງບໍລິການ VR ສຳລັບ <xliff:g id="SERVICE">%1$s</xliff:g> ບໍ?"</string>
@@ -3768,6 +3761,11 @@
     <string name="zen_mode_events_summary" msgid="3241903481309766428">"ຈາກນັດໝາຍປະຕິທິນຕໍ່ໄປ"</string>
     <string name="zen_mode_events_list" msgid="7191316245742097229">"ເຫດການ"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"ເຫດການ"</string>
+    <string name="zen_mode_apps_title" msgid="1691010857014041183">"ແອັບ"</string>
+    <string name="zen_mode_apps_category" msgid="4082380323683889391">"ແອັບທີ່ສາມາດລົບກວນໄດ້"</string>
+    <string name="zen_mode_apps_priority_apps" msgid="7386196048313716076">"ແອັບທີ່ເລືອກແລ້ວ"</string>
+    <string name="zen_mode_apps_none_apps" msgid="2493642312793604327">"ບໍ່ມີ"</string>
+    <string name="zen_mode_apps_all_apps" msgid="705700582778445484">"ທັງໝົດ"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ອະນຸຍາດໃຫ້ແອັບຍົກເລີກໄດ້"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ແອັບທີ່ສາມາດລົບກວນໄດ້"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"ເລືອກແອັບເພີ່ມເຕີມ"</string>
@@ -4546,8 +4544,7 @@
     <string name="media_output_label_title" msgid="4139048973886819148">"ຫຼິ້ນຢູ່ <xliff:g id="LABEL">%s</xliff:g>"</string>
     <string name="media_output_title_without_playing" msgid="3339321669132875821">"ສຽງຈະຫຼິ້ນຢູ່"</string>
     <string name="media_output_default_summary" msgid="4200343059396412376">"ອຸປະກອນນີ້"</string>
-    <!-- no translation found for media_output_audio_sharing (8169294522817470115) -->
-    <skip />
+    <string name="media_output_audio_sharing" msgid="8169294522817470115">"ກຳລັງແບ່ງປັນສຽງ"</string>
     <string name="media_out_summary_ongoing_call_state" msgid="475188726850090363">"ບໍ່ສາມາດໃຊ້ໄດ້ລະຫວ່າງການໂທ"</string>
     <string name="take_call_on_title" msgid="1159417893879946757">"ຮັບສາຍຢູ່"</string>
     <string name="cannot_change_apn_toast" msgid="296540724089240405">"ບໍ່ສາມາດປ່ຽນ APN ນີ້ໄດ້."</string>
@@ -4743,10 +4740,8 @@
     <string name="sim_onboarding_next" msgid="6415025179929475355">"ຕໍ່ໄປ"</string>
     <string name="sim_onboarding_progressbar_turning_sim_on" msgid="1163318788393361574">"ກຳລັງເປີດ <xliff:g id="CARRIER_NAME">%1$s</xliff:g>…"</string>
     <string name="mobile_network_spn_title" msgid="3053793174495329077">"ເຄືອຂ່າຍມືຖື"</string>
-    <!-- no translation found for imei_primary (5312232202518974440) -->
-    <skip />
-    <!-- no translation found for meid_primary (3256732684155678106) -->
-    <skip />
+    <string name="imei_primary" msgid="5312232202518974440">"IMEI (ຫຼັກ)"</string>
+    <string name="meid_primary" msgid="3256732684155678106">"MEID (ຫຼັກ)"</string>
     <string name="mobile_network_phone_number_title" msgid="2090794402855021784">"ເບີໂທລະສັບ"</string>
     <string name="mobile_network_sim_label_color_title" msgid="2401352348041132876">"ປ້າຍກຳກັບ ແລະ ສີຊິມ"</string>
     <string name="sim_setup_channel_id" msgid="8797972565087458515">"ການເປີດນຳໃຊ້ເຄືອຂ່າຍ"</string>
